welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: Missing closing brace `}' assumed here
if (liMessage() == 'R' ) {droite();avance()}
^BDRBuggle:10: error: Missing closing brace `}' assumed here
	}
        ^